# Brief

./: README.md  mkdocs.yml
.github/workflows/: build-linux.yml  ci.yml  release-macos.yml
brief/: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
brief/docs/: DEVELOPMENT.md  adrs.md  architecture.md  conventions.md  index.md  setup.md  tauri-commands.md  testing-ci.md  whisperx.md
brief/src/: App.css  App.tsx  main.tsx
brief/src-tauri/: Cargo.toml  build.rs  entitlements.plist  rustfmt.toml  tauri.conf.json
brief/src-tauri/capabilities/: default.json
brief/src-tauri/src/: audio.rs  crypto_key.rs  defaults.rs  error.rs  export.rs  lib.rs  main.rs  memory.rs  recovery.rs  state.rs  storage.rs  summarize.rs  templates.rs  transcribe.rs  types.rs
brief/src-tauri/src/commands/: audio.rs  export.rs  health.rs  meetings.rs  mod.rs  recording.rs  settings.rs
brief/src/components/: ErrorBoundary.tsx  FollowUpSection.tsx  LowRamOnboardingBanner.tsx  OnboardingWizard.tsx  RecoveryBanner.tsx  StatsPanel.tsx  TranscriptSection.tsx
brief/src/hooks/: useExport.ts
brief/src/i18n/: getStoredLanguage.test.ts  index.ts  localeParity.test.ts
brief/src/services/: meetingService.ts  settingsService.ts
brief/src/types/: index.test.ts  index.ts
brief/src/utils/: exportUtils.ts
brief/src/views/: HistoryView.test.ts  HistoryView.tsx  OutputView.test.ts  OutputView.tsx  RecordingView.test.ts  RecordingView.tsx  SettingsView.test.ts  SettingsView.tsx
brief/whisperx_runner/: download_models.py  payload.py  pyproject.toml  setup.sh  whisperx_runner.py
brief/whisperx_runner/models/: README
brief/whisperx_runner/tests/: conftest.py  test_download_models.py  (+4 more)
docs/: architecture-audit.md
(+2 files in other folders)
