[package]
name = "brief"
version = "0.1.0"
description = "Brief — lokale Meeting Intelligence"
authors = ["you"]
edition = "2021"

[lib]
name = "brief_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
cpal = "0.15"
hound = "3.5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
