[package]
name = "brief"
version = "0.1.0"
description = "Brief — lokale Meeting Intelligence"
authors = ["you"]
edition = "2021"

[lib]
name = "brief_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
cpal = "0.15"
hound = "3.5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
libsqlite3-sys = { version = "0.27", features = ["bundled-sqlcipher"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
rand = "0.8"
hex = "0.4"
printpdf = "0.7"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
url = "2"
